--- a/package.json
+++ b/package.json
@@ -9,13 +9,26 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
     "expo": "~50.0.14",
+    "expo-constants": "~15.4.6",
     "expo-status-bar": "~1.11.1",
+    "formik": "^2.4.6",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-dom": "^18.3.1",
+    "react-native": "0.73.6",
+    "react-native-web": "^0.19.11",
+    "styled-components": "^6.1.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@babel/eslint-parser": "^7.24.5",
+    "@eslint/js": "^9.1.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "globals": "^15.1.0",
+    "web-vitals": "^3.5.2"
   },
   "private": true
 }
